[gd_scene load_steps=15 format=3 uid="uid://d0altvtk67lo8"]

[ext_resource type="Script" path="res://Game/Clickers/Hacking/hack_item_button.gd" id="1_qsk31"]
[ext_resource type="PackedScene" uid="uid://b2o66qawxrwjp" path="res://Game/Interface/gold_icon.tscn" id="3_0sjxu"]
[ext_resource type="Theme" uid="uid://caima42uc2vm4" path="res://Game/Themes/NoScrollBars.tres" id="4_7kjjd"]
[ext_resource type="Script" path="res://Game/Clickers/Hacking/hack_item_code_edit.gd" id="4_dn8le"]
[ext_resource type="PackedScene" uid="uid://bfre1ywod8qf8" path="res://Game/Interface/brain_icon.tscn" id="4_pubii"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pcgk5"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 5
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 1, 0.6, 1)
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lbs0m"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(7.09929e-07, 0.246251, 0.133309, 1)
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d1dab"]
bg_color = Color(0, 1, 0.6, 1)
border_width_left = 3
border_width_top = 3
border_width_bottom = 3
border_color = Color(0, 0.247059, 0.133333, 1)
border_blend = true
corner_radius_top_left = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bnrru"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gvn61"]
bg_color = Color(0.881796, 0.482466, 0.000684034, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8mqma"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i50no"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yo4qo"]
bg_color = Color(0, 1, 0.6, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0hmjf"]
bg_color = Color(0, 0.67451, 0.403922, 1)

[node name="HackItemButton" type="Control" groups=["g_hack_item_button"]]
custom_minimum_size = Vector2(0, 200)
layout_mode = 3
anchor_right = 1.0
anchor_bottom = 0.2
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_qsk31")
metadata/_edit_use_anchors_ = true

[node name="NinePatchRect" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_pcgk5")

[node name="MainMarginContainer" type="MarginContainer" parent="NinePatchRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/MainMarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect/MainMarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HackNameEdit" type="CodeEdit" parent="NinePatchRect/MainMarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "Hack_Granny_TV(TVP_IP, duration = X)"
script = ExtResource("4_dn8le")

[node name="HackItemLevel" type="Label" parent="NinePatchRect/MainMarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(75, 30)
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 13
text = "1 / 20"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HackItemInfo" type="HBoxContainer" parent="NinePatchRect/MainMarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="NinePatchRect/MainMarginContainer/VBoxContainer/HackItemInfo"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/MainMarginContainer/VBoxContainer/HackItemInfo"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect/MainMarginContainer/VBoxContainer/HackItemInfo/VBoxContainer"]
layout_mode = 2

[node name="HackItemProgressBar" type="ProgressBar" parent="NinePatchRect/MainMarginContainer/VBoxContainer/HackItemInfo/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_styles/background = SubResource("StyleBoxFlat_lbs0m")
theme_override_styles/fill = SubResource("StyleBoxFlat_d1dab")
value = 70.0
show_percentage = false

[node name="CenterContainer" type="CenterContainer" parent="NinePatchRect/MainMarginContainer/VBoxContainer/HackItemInfo/VBoxContainer/HBoxContainer/HackItemProgressBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ProgressValueLabel" type="Label" parent="NinePatchRect/MainMarginContainer/VBoxContainer/HackItemInfo/VBoxContainer/HBoxContainer/HackItemProgressBar/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/outline_size = 2
text = "LOADING"

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect/MainMarginContainer/VBoxContainer/HackItemInfo/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 4
alignment = 2

[node name="GoldGain" type="Label" parent="NinePatchRect/MainMarginContainer/VBoxContainer/HackItemInfo/VBoxContainer/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 15

[node name="GoldIcon" parent="NinePatchRect/MainMarginContainer/VBoxContainer/HackItemInfo/VBoxContainer/HBoxContainer/HBoxContainer" instance=ExtResource("3_0sjxu")]
layout_mode = 2
size_flags_horizontal = 8

[node name="HackItemCD" type="Label" parent="NinePatchRect/MainMarginContainer/VBoxContainer/HackItemInfo/VBoxContainer/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="NinePatchRect/MainMarginContainer/VBoxContainer/HackItemInfo/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HackItemCodeEdit" type="CodeEdit" parent="NinePatchRect/MainMarginContainer/VBoxContainer/HackItemInfo/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
theme = ExtResource("4_7kjjd")
theme_override_colors/font_placeholder_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 13
text = "if __name__ == \"__main__\":
    hack_granny_tv(TV_IP)
    hack_duration = X seconds
klklkjhjkh"
context_menu_enabled = false
shortcut_keys_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false
wrap_mode = 1
caret_blink = true
caret_move_on_right_click = false
caret_multiple = false
use_default_word_separators = false
draw_tabs = true
gutters_draw_line_numbers = true
indent_size = 8
indent_automatic = true
script = ExtResource("4_dn8le")

[node name="HBoxContainer2" type="VBoxContainer" parent="NinePatchRect/MainMarginContainer/VBoxContainer/HackItemInfo/VBoxContainer/HBoxContainer3"]
layout_mode = 2
metadata/_edit_use_anchors_ = true

[node name="BuyItemButton" type="Button" parent="NinePatchRect/MainMarginContainer/VBoxContainer/HackItemInfo/VBoxContainer/HBoxContainer3/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_bnrru")
theme_override_styles/disabled = SubResource("StyleBoxFlat_gvn61")

[node name="Container" type="HBoxContainer" parent="NinePatchRect/MainMarginContainer/VBoxContainer/HackItemInfo/VBoxContainer/HBoxContainer3/HBoxContainer2/BuyItemButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 2

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/MainMarginContainer/VBoxContainer/HackItemInfo/VBoxContainer/HBoxContainer3/HBoxContainer2/BuyItemButton/Container"]
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="BuyTitle" type="Label" parent="NinePatchRect/MainMarginContainer/VBoxContainer/HackItemInfo/VBoxContainer/HBoxContainer3/HBoxContainer2/BuyItemButton/Container/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Acheter"

[node name="NbofBuy" type="Label" parent="NinePatchRect/MainMarginContainer/VBoxContainer/HackItemInfo/VBoxContainer/HBoxContainer3/HBoxContainer2/BuyItemButton/Container/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "x 1"

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect/MainMarginContainer/VBoxContainer/HackItemInfo/VBoxContainer/HBoxContainer3/HBoxContainer2/BuyItemButton/Container"]
layout_mode = 2
size_flags_horizontal = 10
alignment = 2

[node name="HackItemPriceLabel" type="Label" parent="NinePatchRect/MainMarginContainer/VBoxContainer/HackItemInfo/VBoxContainer/HBoxContainer3/HBoxContainer2/BuyItemButton/Container/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "390.8 K"

[node name="BrainIcon" parent="NinePatchRect/MainMarginContainer/VBoxContainer/HackItemInfo/VBoxContainer/HBoxContainer3/HBoxContainer2/BuyItemButton/Container/HBoxContainer" instance=ExtResource("4_pubii")]
layout_mode = 2
size_flags_horizontal = 10
alignment_horizontal = 2

[node name="HSeparator" type="HSeparator" parent="NinePatchRect/MainMarginContainer/VBoxContainer/HackItemInfo/VBoxContainer/HBoxContainer3/HBoxContainer2"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_8mqma")

[node name="SourceButton" type="Button" parent="NinePatchRect/MainMarginContainer/VBoxContainer/HackItemInfo/VBoxContainer/HBoxContainer3/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(85, 50)
layout_mode = 2
theme_override_constants/outline_size = 14
text = "Source"

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/MainMarginContainer/VBoxContainer/HackItemInfo/VBoxContainer/HBoxContainer3/HBoxContainer2"]
visible = false
layout_mode = 2

[node name="HackItemTexture" type="Button" parent="NinePatchRect/MainMarginContainer/VBoxContainer/HackItemInfo/VBoxContainer/HBoxContainer3/HBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(75, 50)
layout_mode = 2
theme_override_constants/outline_size = 2
theme_override_styles/disabled = SubResource("StyleBoxFlat_i50no")
theme_override_styles/hover = SubResource("StyleBoxFlat_yo4qo")
theme_override_styles/pressed = SubResource("StyleBoxFlat_yo4qo")
theme_override_styles/normal = SubResource("StyleBoxFlat_0hmjf")
text = "Hack"

[node name="HackDuration" type="Label" parent="NinePatchRect/MainMarginContainer/VBoxContainer/HackItemInfo/VBoxContainer/HBoxContainer3/HBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 0.4, 1, 1)
text = "10 s"

[node name="ToUnlockedPanel" type="ColorRect" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.784314)
metadata/_edit_use_anchors_ = true

[node name="UnlockedButton" type="Button" parent="ToUnlockedPanel"]
unique_name_in_owner = true
modulate = Color(0.501961, 0.501961, 0.501961, 1)
custom_minimum_size = Vector2(200, 50)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ToUnlockedPanel/UnlockedButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="BrainCost" type="Label" parent="ToUnlockedPanel/UnlockedButton/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "X"

[node name="BrainIcon" parent="ToUnlockedPanel/UnlockedButton/HBoxContainer" instance=ExtResource("4_pubii")]
layout_mode = 2
size_flags_horizontal = 4

[connection signal="gui_input" from="NinePatchRect/MainMarginContainer/VBoxContainer/HackItemInfo/VBoxContainer/HBoxContainer3/HackItemCodeEdit" to="." method="_on_hack_item_code_edit_gui_input"]
[connection signal="lines_edited_from" from="NinePatchRect/MainMarginContainer/VBoxContainer/HackItemInfo/VBoxContainer/HBoxContainer3/HackItemCodeEdit" to="." method="_on_hack_item_code_edit_lines_edited_from"]
[connection signal="text_set" from="NinePatchRect/MainMarginContainer/VBoxContainer/HackItemInfo/VBoxContainer/HBoxContainer3/HackItemCodeEdit" to="." method="_on_hack_item_code_edit_text_set"]
[connection signal="pressed" from="NinePatchRect/MainMarginContainer/VBoxContainer/HackItemInfo/VBoxContainer/HBoxContainer3/HBoxContainer2/BuyItemButton" to="." method="_on_buy_item_button_pressed"]
[connection signal="pressed" from="NinePatchRect/MainMarginContainer/VBoxContainer/HackItemInfo/VBoxContainer/HBoxContainer3/HBoxContainer2/VBoxContainer/HackItemTexture" to="." method="_on_hack_item_texture_pressed"]
